objects/Maintenance_Asset_SRT__c.object
<CustomObject>
    <fields>
        <fullName>Maintenance_Asset__c</fullName>
        <label>Maintenance Asset</label>
        <referenceTo>MaintenanceAsset</referenceTo>
        <relationshipLabel>SRTs</relationshipLabel>
        <relationshipName>Maintenance_Asset_SRTs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SRT_Access_Code__c</fullName>
        <label>SRT Access Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRT_Description__c</fullName>
        <label>SRT Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRT_Quantity__c</fullName>
        <label>SRT Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SRT_Time__c</fullName>
        <label>SRT Time</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Maintenance Asset SRT</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SRT Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Asset SRTs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>